<?xml version="1.0" encoding="UTF-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable name="imageSliderGroup3Model" type="com.demoapp.app.modules.onboardingactivity.data.model.ImageSliderGroup3Model"/>
    </data>
    <FrameLayout android:id="@+id/frameGroup152"
        android:layout_height="match_parent" android:layout_width="match_parent">
        <ImageView android:id="@+id/imageBackgroundimag"
            android:layout_gravity="start"
            android:layout_height="match_parent"
            android:layout_width="match_parent"
            android:scaleType="fitXY"
            imageUrl="@{imageSliderGroup3Model.imageBackgroundimag}" tools:src="@drawable/img_backgroundimag"/>
        <LinearLayout android:id="@+id/linearGroup148"
            android:layout_gravity="bottom|center"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_20pxv"
            android:layout_marginEnd="@dimen/_18pxh"
            android:layout_marginStart="@dimen/_18pxh"
            android:layout_marginTop="@dimen/_20pxv"
            android:layout_width="match_parent" android:orientation="vertical">
            <TextView android:ellipsize="end"
                android:gravity="center_horizontal"
                android:id="@+id/txtImSuperFast"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_14pxh"
                android:layout_marginStart="@dimen/_14pxh"
                android:layout_width="match_parent"
                android:singleLine="true"
                android:text="@{imageSliderGroup3Model.txtImSuperFast}"
                style="@style/txtPoppinsbold28" tools:text="@string/lbl_i_m_super_fast"/>
            <TextView android:ellipsize="end"
                android:gravity="center_horizontal"
                android:id="@+id/txtMadeToRockYo"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_14pxh"
                android:layout_marginStart="@dimen/_14pxh"
                android:layout_width="match_parent"
                android:singleLine="true"
                android:text="@{imageSliderGroup3Model.txtMadeToRockYo}"
                style="@style/txtPoppinssemibold16" tools:text="@string/msg_made_to_rock_yo"/>
            <TextView android:id="@+id/txtLoremIpsumIs"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_33pxh"
                android:layout_marginStart="@dimen/_33pxh"
                android:layout_marginTop="@dimen/_18pxv"
                android:layout_width="match_parent"
                android:text="@{imageSliderGroup3Model.txtLoremIpsumIs}"
                style="@style/txtPoppinsmedium12" tools:text="@string/msg_lorem_ipsum_is"/>
            <androidx.appcompat.widget.AppCompatButton
                android:ellipsize="end" android:gravity="center"
                android:id="@+id/btnContinue"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_14pxh"
                android:layout_marginStart="@dimen/_14pxh"
                android:layout_marginTop="@dimen/_28pxv"
                android:layout_width="match_parent"
                android:paddingBottom="@dimen/_16pxv"
                android:paddingEnd="@dimen/_30pxh"
                android:paddingStart="@dimen/_30pxh"
                android:paddingTop="@dimen/_17pxv"
                android:singleLine="true"
                android:text="@string/lbl_continue"
                android:textAllCaps="false"
                style="@style/btnSolidRounded" tools:text="@string/lbl_continue"/>
            <LinearLayout android:id="@+id/linearGroup145"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_26pxv"
                android:layout_width="match_parent" android:orientation="horizontal">
                <LinearLayout android:id="@+id/linearGroup153"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5"
                    android:layout_width="0dp" android:orientation="horizontal">
                    <ImageView android:id="@+id/imageLefticon"
                        android:layout_height="@dimen/_23pxh"
                        android:layout_width="@dimen/_24pxh"
                        android:scaleType="fitXY"
                        android:src="@drawable/img_lefticon" imageUrl="@{imageSliderGroup3Model.imageLefticon}"/>
                    <TextView android:ellipsize="end"
                        android:id="@+id/txtPrevious"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/_1pxv"
                        android:layout_marginStart="@dimen/_7pxh"
                        android:layout_marginTop="@dimen/_2pxv"
                        android:layout_weight="0.69"
                        android:layout_width="0dp"
                        android:singleLine="true"
                        android:text="@{imageSliderGroup3Model.txtPrevious}"
                        style="@style/txtPoppinsmedium12" tools:text="@string/lbl_previous"/>
                </LinearLayout>
                <LinearLayout android:id="@+id/linearGroup154"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_171pxh"
                    android:layout_weight="0.5"
                    android:layout_width="0dp" android:orientation="horizontal">
                    <TextView android:ellipsize="end"
                        android:id="@+id/txtNext"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/_1pxv"
                        android:layout_marginTop="@dimen/_2pxv"
                        android:layout_weight="0.69"
                        android:layout_width="0dp"
                        android:singleLine="true"
                        android:text="@{imageSliderGroup3Model.txtNext}"
                        style="@style/txtPoppinsmedium12" tools:text="@string/lbl_next"/>
                    <ImageView android:id="@+id/imageRightIcon"
                        android:layout_height="@dimen/_23pxh"
                        android:layout_marginStart="@dimen/_7pxh"
                        android:layout_width="@dimen/_24pxh"
                        android:scaleType="fitXY"
                        android:src="@drawable/img_righticon" imageUrl="@{imageSliderGroup3Model.imageRightIcon}"/>
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </FrameLayout>
</layout>
